<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Connexus</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_instruction">Login with Gmail</string>
    <string name="gmail_id">Gmail ID</string>
    <string name="gmail_password">Gmail Password</string>
    <string name="login">Login</string>
    <string name="view_streams">View Streams</string>
    <string name="title_activity_view_all_streams">ViewAllStreams</string>
    <string name="title_activity_view_single_stream">ViewSingleStream</string>
    <string name="upload_an_image">Upload an Image</string>
    <string name="title_activity_upload">upload</string>
    <string name="choose_from_library">Choose From Library</string>
    <string name="use_camera">Use Camera</string>
    <string name="upload_hint">Add a message and/or tags</string>
    <string name="search_hint">Find Streams</string>
    <string name="search">Search</string>
    <string name="nearby">Nearby</string>
    <string name="my_subscribed_streams">My Subscribed Streams</string>
    <string name="title_activity_search_handler">SearchHandler</string>
    <string name="title_activity_nearby_photos">NearbyPhotos</string>
    <string name="nearby_pictures">Nearby Pictures</string>
    <string name="more">More</string>
    <string name="title_activity_camera_preview">CameraPreview</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_subscribed_streams">SubscribedStreams</string>

</resources>
