<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.connexus.yzhao.connexus.NearbyPhotos">

    <TextView
        android:text="@string/app_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="32sp"
        />

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnWidth="90dp"
        android:numColumns="4"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        />
    <TextView
        android:text="@string/nearby_pictures"
        android:layout_width="match_parent"
        android:textSize="22sp"
        android:layout_height="wrap_content"
        />
    <TextView
        android:text="Hold image to see distance away from you"
        android:layout_width="match_parent"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/more_nearby_photos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/more"
        android:onClick="moreNearbyPhotos"
        android:visibility="invisible"
    />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_streams"
        android:onClick="viewAllStreams"
    />


</LinearLayout>

