<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.connexus.yzhao.connexus.ViewAllStreams">

    <TextView
        android:text="@string/app_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="32sp"
        />
    <TextView
        android:text="Hold to view stream name"
        android:layout_width="match_parent"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        />

    <!--<ScrollView-->
        <!--android:id="@+id/response_scroll"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:scrollbars="vertical"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:fillViewport="true">-->

        <!--<TextView-->
            <!--android:id="@+id/response_text"-->
            <!--android:layout_width="match_parent"-->
            <!--android:textSize="22sp"-->
            <!--android:layout_height="match_parent" />-->
    <!--</ScrollView>-->

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnWidth="90dp"
        android:numColumns="4"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText android:id="@+id/search_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:onClick="searchHandler"
            />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nearby"
        android:onClick="viewNearbyPhotos"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_subscribed_streams"
        android:onClick="viewSubscribedStreams"
        />
</LinearLayout>

